--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "bootstrap": "^3.4.1",
     "cookie-parser": "^1.4.4",
     "dayjs": "^1.8.15",
     "express": "^4.17.1",
@@ -26,5 +27,7 @@
     "simplemde": "^1.11.2",
     "svg-captcha": "^1.4.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "http-proxy-middleware": "^0.19.1"
+  }
 }
