--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^3.4.1",
     "cookie-parser": "^1.4.4",
+    "cropperjs": "^1.5.5",
     "dayjs": "^1.8.15",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
